tests/jsonnet/errors/string_invalid_access.jsonnet
[
  // "f"
  "foobar"[0],
  // "f" too
  "foobar"[0.7],
  // string bounds error: 8 not within [0, 6)
  "foobar"[8],
  
]
